# chip8_emulator

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: app.cpp  app.h  emulator.cpp  emulator.h  main.cpp
